// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`positioning absolute 1`] = `
.c0 {
  box-sizing: border-box;
  position: absolute;
}

<div
  class="c0"
/>
`;

exports[`positioning all 3 1`] = `
.c0 {
  box-sizing: border-box;
  position: absolute;
}

<div
  class="c0"
/>
`;

exports[`positioning position 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
}

<div
  class="c0"
/>
`;

exports[`positioning top 2 1`] = `
.c0 {
  box-sizing: border-box;
  position: absolute;
}

<div
  class="c0"
/>
`;

exports[`renders 1`] = `
.c0 {
  box-sizing: border-box;
}

<input
  class="c0"
/>
`;
